# ews_sender

./: .gitignore  README.md
ews_sender/: config.example.json  pyproject.toml
ews_sender/ews_sender/: .venv  __init__.py  client.py  exceptions.py  message.py  send_email.py  utils.py
ews_sender/tests/: test_ews_sender.py
