[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ews_sender"
version = "0.1.0"
description = "Python module for sending emails via EWS/Exchange Online with OAuth2"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ews", "exchange", "email", "microsoft", "office365", "azure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]
requires-python = ">=3.10"
dependencies = [
    "exchangelib>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-python-dateutil>=2.8.0",
]

[project.scripts]
send-email = "ews_sender.send_email:main"

[project.urls]
Homepage = "https://github.com/yourusername/ews_sender"
Documentation = "https://github.com/yourusername/ews_sender#readme"
Repository = "https://github.com/yourusername/ews_sender"
Issues = "https://github.com/yourusername/ews_sender/issues"

[tool.hatch.build.targets.wheel]
packages = ["ews_sender"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
